// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Schema test suite additionalItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 1;
    for (; v1 < v0.length; (v1)++) {
      if (f1(v0[v1]) !== null) {
        /* additionalItems */
        return 'error';
      }
    }
    if (0 < v0.length && f2(v0[0]) !== null) {
      /* items[0] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== null) {
          /* items */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0.length > 3) {
      /* additionalItems */
      return 'error';
    }
    if (0 < v0.length && f1(v0[0]) !== null) {
      /* items[0] */
      return 'error';
    }
    if (1 < v0.length && f1(v0[1]) !== null) {
      /* items[1] */
      return 'error';
    }
    if (2 < v0.length && f1(v0[2]) !== null) {
      /* items[2] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      /* items[0] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            /* properties[foo] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== null) {
            /* properties[bar] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v1.match(/^v/)) {
          if (f1(v2) !== null) {
            /* properties[^v] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          /* additionalProperties */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            /* properties[foo] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== null) {
            /* properties[bar] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f2(v2) !== null) {
          /* additionalProperties */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'boolean') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (f1(v2) !== null) {
          /* additionalProperties */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== null) {
      /* allOf */
      return 'error';
    }
    if (f2(v0) !== null) {
      /* allOf */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined && f3(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar === undefined) {
      /* required[bar] */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f4(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.foo === undefined) {
      /* required[foo] */
      return 'error';
    }
    return null;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (f1(v0) !== null) {
      /* allOf */
      return 'error';
    }
    if (f2(v0) !== null) {
      /* allOf */
      return 'error';
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined && f3(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar === undefined) {
      /* required[bar] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f4(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.foo === undefined) {
      /* required[foo] */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.baz;
      if (v1 !== undefined && f5(v1) !== null) {
        /* properties[baz] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.baz === undefined) {
      /* required[baz] */
      return 'error';
    }
    return null;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  function f5(v0) {
    if (v0 !== null) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== null) {
      /* allOf */
      return 'error';
    }
    if (f2(v0) !== null) {
      /* allOf */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'number' && v0 > 30) {
      /* maximum */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 20) {
      /* minimum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === null && (v1)++;
    f2(v0) === null && (v1)++;
    if (v1 === 0) {
      /* anyOf */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      /* minimum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === null && (v1)++;
    f2(v0) === null && (v1)++;
    if (v1 === 0) {
      /* anyOf */
      return 'error';
    }
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      /* maxLength */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      /* minLength */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      /* minLength */
      return 'error';
    }
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && v0.foo === undefined) {
      /* dependencies[bar] */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.quux !== undefined) {
      if (v0.foo === undefined) {
        /* dependencies[quux] */
        return 'error';
      }
      if (v0.bar === undefined) {
        /* dependencies[quux] */
        return 'error';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && f1(v0) !== null) {
      /* dependencies[bar] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 1) {
      (v1)++;
    }
    if (v0 === 2) {
      (v1)++;
    }
    if (v0 === 3) {
      (v1)++;
    }
    if (v1 === 0) {
      /* enum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 6) {
      (v1)++;
    }
    if (v0 === 'foo') {
      (v1)++;
    }
    if (JSON.stringify(v0) === '[]') {
      (v1)++;
    }
    if (v0 === true) {
      (v1)++;
    }
    if (JSON.stringify(v0) === '{\\"foo\\":12}') {
      (v1)++;
    }
    if (v1 === 0) {
      /* enum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar === undefined) {
      /* required[bar] */
      return 'error';
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'foo') {
      (v1)++;
    }
    if (v1 === 0) {
      /* enum */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'bar') {
      (v1)++;
    }
    if (v1 === 0) {
      /* enum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== null) {
          /* items */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      /* items[0] */
      return 'error';
    }
    if (1 < v0.length && f2(v0[1]) !== null) {
      /* items[1] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length > 2) {
      /* maxItems */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      /* maxLength */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length > 2) {
      /* maxProperties */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 > 3) {
      /* maximum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 >= 3) {
      /* maximum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length < 1) {
      /* minItems */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      /* minLength */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length < 1) {
      /* minProperties */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 < 1.1) {
      /* minimum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 <= 1.1) {
      /* minimum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 2;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        /* multipleOf */
        return 'error';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 1.5;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        /* multipleOf */
        return 'error';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 0.0001;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        /* multipleOf */
        return 'error';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = f1(v0);
    if (v1 === null) {
      /* not */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = f1(v0);
    if (v1 === null) {
      /* not */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    v1 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v1)++;
    }
    if (typeof v0 !== 'boolean') {
      (v1)++;
    }
    if (v1 === 2) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = f1(v0);
    if (v1 === null) {
      /* not */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    var v1;
    v1 = f2(v0);
    if (v1 === null) {
      /* not */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === null) {
      (v1)++;
    }
    if (f2(v0) === null) {
      (v1)++;
    }
    if (v1 !== 1) {
      /* oneOf */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      /* minimum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === null) {
      (v1)++;
    }
    if (f2(v0) === null) {
      (v1)++;
    }
    if (v1 !== 1) {
      /* oneOf */
      return 'error';
    }
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      /* minLength */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length > 4) {
      /* maxLength */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/^a*$/))) {
      /* pattern */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/a+/))) {
      /* pattern */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/f.*o/) && f1(v2) !== null) {
          /* properties[f.*o] */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/a*/) && f1(v2) !== null) {
          /* properties[a*] */
          return 'error';
        }
        if (v1.match(/aaa*/) && f2(v2) !== null) {
          /* properties[aaa*] */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 > 20) {
      /* maximum */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/[0-9]{2,}/) && f1(v2) !== null) {
          /* properties[[0-9]{2,}] */
          return 'error';
        }
        if (v1.match(/X_/) && f2(v2) !== null) {
          /* properties[X_] */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            /* properties[foo] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f2(v2) !== null) {
            /* properties[bar] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v1.match(/f.o/)) {
          if (f3(v2) !== null) {
            /* properties[f.o] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f4(v2) !== null) {
          /* additionalProperties */
          return 'error';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (Array.isArray(v0) && v0.length > 3) {
      /* maxItems */
      return 'error';
    }
    if (!(Array.isArray(v0))) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f3(v0) {
    if (Array.isArray(v0) && v0.length < 2) {
      /* minItems */
      return 'error';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f0(v2) !== null) {
            /* properties[foo] */
            return 'error';
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          /* additionalProperties */
          return 'error';
        }
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      /* items[0] */
      return 'error';
    }
    if (1 < v0.length && f1(v0[1]) !== null) {
      /* items[1] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.tilda;
      if (v1 !== undefined && f4(v1) !== null) {
        /* properties[tilda] */
        return 'error';
      }
      v1 = v0.slash;
      if (v1 !== undefined && f4(v1) !== null) {
        /* properties[slash] */
        return 'error';
      }
      v1 = v0.percent;
      if (v1 !== undefined && f4(v1) !== null) {
        /* properties[percent] */
        return 'error';
      }
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 5`] = `
"(function() {
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f3,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    return null;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.$ref;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[$ref] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 9`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.meta;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[meta] */
        return 'error';
      }
      v1 = v0.nodes;
      if (v1 !== undefined && f2(v1) !== null) {
        /* properties[nodes] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      if (v0.meta === undefined) {
        /* required[meta] */
        return 'error';
      }
      if (v0.nodes === undefined) {
        /* required[nodes] */
        return 'error';
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  function f2(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f3(v0[v1]) !== null) {
          /* items */
          return 'error';
        }
      }
    }
    if (!(Array.isArray(v0))) {
      /* type */
      return 'error';
    }
    return null;
  }
  function f3(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[bar] */
        return 'error';
      }
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.foo === undefined) {
      /* required[foo] */
      return 'error';
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        /* properties[foo] */
        return 'error';
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'string') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (!(Array.isArray(v0))) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'boolean') {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    if (v0 !== null) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v1)++;
    }
    if (typeof v0 !== 'string') {
      (v1)++;
    }
    if (v1 === 2) {
      /* type */
      return 'error';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite uniqueItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (Array.isArray(v0)) {
      v1 = {};
      v2 = 0;
      for (; v2 < v0.length; (v2)++) {
        v3 = JSON.stringify(v0[v2]);
        v1[v3] = true;
      }
      if (Object.keys(v1).length !== v0.length) {
        /* uniqueItems */
        return 'error';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;
